--- a/views/admin/clientes/novo.ejs
+++ b/views/admin/clientes/novo.ejs
@@ -28,7 +28,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">Data de nascimento</span>
                 </div>
-                <input class="form-control" type="text" name="data" placeholder="Escreva a data no formato dias/mês/ano (Ex: 20/03/1992)" required>
+                <input class="form-control" type="date" name="data" placeholder="Escreva a data no formato dias/mês/ano (Ex: 20/03/1992)" required>
             </div>
             <div class="input-group mb-2">
                 <div class="input-group-prepend">
